[workspace]
members = ["async-pop2"]

[package]
name = "getemail"
license = "MIT"
version = "1.0.0"
edition = "2021"
description = "Get email's from POP3 or IMAP mailbox"
repository = "https://github.com/abusers-inc/getemail"
homepage = "https://crates.io/getemail"
documentation = "https://docs.rs/getemail/latest/getemail/"


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_with = { version = "3.7.0", features = ["base64"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
proxied = "0.3.6"
regex = {version = "1.10.4", optional = true}
async-imap = { version = "0.9.7", default-features = false, features = ["runtime-tokio"] }
fast-socks5 = "0.9.5"
tracing = "0.1.40"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
rustls = "0.23.17"
webpki-roots = "0.26.6"
mail-parser = "0.9.4"
tokio-rustls = "0.26.0"
base64 = "0.22.1"
async-trait = "0.1.83"
paste = "1.0.15"
async-pop2 = { path = "./async-pop2", version = "1.1.1", features = ["sasl", "runtime-tokio"], default-features = false }
thiserror = "2.0.10"

[features]
regex = ["dep:regex"]
