[package]
name = "async-pop2"
description = "A fork of simple Pop3 compatible client"
version = "1.1.1"
license = "MIT"
repository = "https://github.com/Dust-Mail/async-pop"
edition = "2021"

rust-version = "1.65.0"

[dependencies]
async-trait = { version = "0.1.77", optional = true }
base64 = { version = "0.21.5", optional = true }
bytes = "1.5.0"
futures = "0.3.30"
log = "0.4.20"
nom = "7.1.3"
tokio = { version = "1.35.1", features = [
	"net",
	"time",
	"rt",
	"macros",
], optional = true }

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15"

[features]
sasl = ["dep:base64", "dep:async-trait"]

runtime-tokio = ["tokio"]
